# FinalMasterThesisVersion

./: .gitignore  README.md  StructuredProductTool.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: README.md
src/structured_product_tool/: __init__.py  app.py  config.py  correlation.py  pricing.py  products.py  risk_ccr_csa.py  simulation.py
tests/: test_correlation.py  test_pricing.py  test_simulation.py
